<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio02">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_pedidos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/editNombreCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_cliente"
        android:gravity="center_horizontal"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/editNumeroCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/n_mero_cliente"
        android:gravity="center_horizontal"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/editNombreCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editProductos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/productos"
        android:gravity="center_horizontal"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editNumeroCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editCiudad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        android:gravity="center_horizontal"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editProductos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/direcci_n"
        android:gravity="center_horizontal"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/editCiudad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        app:layout_constraintTop_toBottomOf="@id/editDireccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>