<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio01">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/mostrar"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnOcultar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnOcultar"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/ocultar"
        android:background="@color/green"
        app:layout_constraintStart_toEndOf="@id/btnMostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"/>

    <View
        android:id="@+id/viewVerde"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
